apps/client-onboarding/client-onboarding.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: client-onboarding
  labels:
    app.kubernetes.io/name: client-onboarding
spec:
  type: LoadBalancer
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: client-onboarding
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-onboarding
  labels:
    app.kubernetes.io/name: client-onboarding
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: client-onboarding
  template:
    metadata:
      labels:
        app.kubernetes.io/name: client-onboarding
    spec:
      containers:
        - name: client-onboarding
          image: "docker.io/burrsutter/hello:1.0.0"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
