apps/client-onboarding/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-onboarding
  labels:
    app.kubernetes.io/name: client-onboarding
spec:
  type: LoadBalancer
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: client-onboarding
