apps/client-onboarding/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: client-onboarding
  labels:
    name: client-onboarding
spec:
  path: "/"
  to:
    kind: Service
    name: client-onboarding
